[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maie"
version = "0.1.0"
description = "MAIE - AI in games"
readme = "README.md"
authors = [{ name = "Václav Alt", email = "alt.vaclav@gmail.com" }]
license = { text = "GNU GPLv3" }
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pygame",
    "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "build",
]

